--- a/alliteration.html
+++ b/alliteration.html
@@ -42,11 +42,11 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <h2>What is Alliteration?</h2>
-      <p>When several words begin with the same letter or sound.</p>
-      <p>Let's learn more about alliteration!</p>
-      <p>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <h2 class = "flex-item">What is Alliteration?</h2>
+      <p class = "flex-item">When several words begin with the same letter or sound.</p>
+      <p class = "flex-item">Let's learn more about alliteration!</p>
+      <p class = "flex-item">
         <label>Learn More About Alliteration:</label>
         <button class="button" onclick="showMovies()" value="1">Video 1</button>
         <button class="button" onclick="showMovies()" value="2">Video 2</button>
@@ -59,8 +59,8 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen
         ></iframe>
-      <p>
-        <p>Alright, now let's read some poems and find some alliteration!</p>
+        <p class = "flex-item">Alright, now let's read some poems and find some alliteration!</p>
+      <p class = "flex-item">
         <label>Poem about simile:</label>
         <button class="button" onclick="showPoems()" value="1">Poem 1<br>Rose Seller</button>
         <button class="button" onclick="showPoems()" value="2">Poem 2<br/>Betty Botter</button>
