--- a/hyperbole.html
+++ b/hyperbole.html
@@ -42,11 +42,11 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <h2>What is a Hyperbole? </h2>
-      <p>Hyperboles are exaggerations that are so dramatic that no one would believe it is true. </p>
-      <p>Lets Learn more about hyperboles! </p>
-      <p>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <h2 class = "flex-item">What is a Hyperbole? </h2>
+      <p class = "flex-item">Hyperboles are exaggerations that are so dramatic that no one would believe it is true. </p>
+      <p class = "flex-item">Lets Learn more about hyperboles! </p>
+      <p class = "flex-item">
         <label>Learn More About Hyperboles:</label>
         <button class="button" onclick="showMovies()" value="1">Video 1</button>
         <button class="button" onclick="showMovies()" value="2">Video 2</button>
@@ -59,8 +59,8 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen
         ></iframe>
-      <p>
-        <p>After we watched the videos let read some poems and find hyperboles</p>
+      <p class = "flex-item">After we watched the videos, let's read some poems and find hyperboles!</p>
+      <p class = "flex-item">
         <label>Poem about hyperboles:</label>
         <button class="button" onclick="showPoems()" value="1">Poem 1<br>Appetite</button>
         <button class="button" onclick="showPoems()" value="2">Poem 2<br/>Hyperbole Cafe</button>
