--- a/idiom.html
+++ b/idiom.html
@@ -42,11 +42,11 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <h2>What is an Idiom? </h2>
-      <p>An idiom is a common expression that has a different meaning than what is being said. </p>
-      <p>Lets Learn more about idioms! </p>
-      <p>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <h2 class = "flex-item">What is an Idiom? </h2>
+      <p class = "flex-item">An idiom is a common expression that has a different meaning than what is being said. </p>
+      <p class = "flex-item">Let's learn more about idioms! </p>
+      <p class = "flex-item">
         <label>Learn More About Idioms:</label>
         <button class="button" onclick="showMovies()" value="1">Video 1</button>
         <button class="button" onclick="showMovies()" value="2">Video 2</button>
@@ -59,12 +59,12 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen
         ></iframe>
-      <p>
-        <p>After we watched the videos let read some poems and find idioms</p>
+      <p class = "flex-item">After we watched the videos, let's read some poems and find idioms!</p>
+      <p class = "flex-item">
         <label>Poem about idioms:</label>
-        <button class="button" onclick="showPoems()" value="1">Poem 1<br>Something to tell you</button>
+        <button class="button" onclick="showPoems()" value="1">Poem 1<br>Something to Tell You</button>
         <button class="button" onclick="showPoems()" value="2">Poem 2<br/>Losing Pieces</button>
-        <button class="button" onclick="showPoems()" value="3">Poem 3<br/>Every thing on it</button>
+        <button class="button" onclick="showPoems()" value="3">Poem 3<br/>Every Thing On It</button>
       </p>
       <p class="poem"></p>
     </div>
