--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.11.3/less.min.js"></script>
   </head>
   <body>
-    <div>
         <a class="hamburger" href="#navbar">
             <i class="fa-solid fa-bars"></i>
         </a>
@@ -39,9 +38,9 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <img src="/images/erinneely.png" alt="erin neely" srcset="">
-      <h2>Welcome to the Neely page</h2>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <img class = "flex-item" src="/images/erinneely.png" alt="erin neely" srcset="">
+      <h2 class = "flex-item">Welcome to the Neely Page!</h2>
     </div>
     <footer>
       <div class="footer-container">
@@ -56,6 +55,5 @@
         </div>
       </div>
     </footer>
-    
   </body>
 </html>
