--- a/metaphor.html
+++ b/metaphor.html
@@ -42,10 +42,10 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <h2>What is a Metaphor? </h2>
-      <p>Metaphor is often uses “is” or “are” to compare one object or idea to another. Makes a direct comparison </p>
-      <p>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <h2 class = "flex-item">What is a Metaphor? </h2>
+      <p class = "flex-item">Metaphor is often uses “is” or “are” to compare one object or idea to another. Makes a direct comparison </p>
+      <p class = "flex-item">
         <label>Learn More About Metaphors:</label>
         <button class="button" onclick="showMovies()" value="1">Video 1</button>
         <button class="button" onclick="showMovies()" value="2">Video 2</button>
@@ -58,8 +58,8 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen
         ></iframe>
-      <p>
-        <p>After we watched the videos let read some poems and find metaphors</p>
+      <p class = "flex-item">After we watched the videos let read some poems and find metaphors</p>
+      <p class = "flex-item">
         <label>Poem about metaphors:</label>
         <button class="button" onclick="showPoems()" value="1">Poem 1<br></button>
         <button class="button" onclick="showPoems()" value="2">Poem 2<br/></button>
