--- a/simile.html
+++ b/simile.html
@@ -42,11 +42,11 @@
       </nav>
       </div>
     <div class="wrapper">
-      <h1>The Neely Menu</h1>
-      <h2>What is Simile? </h2>
-      <p>Simile is when two things are compared useing like or as</p>
-      <p>lets Learn more about simile </p>
-      <p>
+      <h1 class = "flex-item">The Neely Menu</h1>
+      <h2 class = "flex-item">What is a Simile? </h2>
+      <p class = "flex-item">Similes are when two things are compared using like or as.</p>
+      <p class = "flex-item">Let's learn more about similes!</p>
+      <p class = "flex-item">
         <label>Learn More About Simile:</label>
         <button class="button" onclick="showMovies()" value="1">Video 1</button>
         <button class="button" onclick="showMovies()" value="2">Video 2</button>
@@ -59,13 +59,13 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen
         ></iframe>
-      <p>
-        <p>After we watched the videos let read some poems and find simile</p>
-        <label>Peom about simile:</label>
-        <button class="button" onclick="showPoems()" value="1">Peom 1<br>Twinkle</button>
-        <button class="button" onclick="showPoems()" value="2">Peom 2<br/>No Difference</button>
-        <button class="button" onclick="showPoems()" value="3">Peom 3<br/>The Flying Popcorn</button>
-        <button class="button" onclick="showPoems()" value="4">Peom 4<br/>The Dragon</button>
+      <p class = "flex-item">After we watched the videos let's read some poems and find some similes!</p>
+      <p class = "flex-item">
+        <label class = "flex-item">Poems about similes:</label>
+        <button class="button" onclick="showPoems()" value="1">Poem 1<br>Twinkle</button>
+        <button class="button" onclick="showPoems()" value="2">Poem 2<br/>No Difference</button>
+        <button class="button" onclick="showPoems()" value="3">Poem 3<br/>The Flying Popcorn</button>
+        <button class="button" onclick="showPoems()" value="4">Poem 4<br/>The Dragon</button>
       </p>
       <p class="poem"></p>
     </div>
