--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     <div class="wrapper">
       <h1 class = "flex-item">The Neely Menu</h1>
-      <img class = "flex-item" src="/images/erinneely.png" alt="erin neely" srcset="">
+      <img class = "flex-item" src="./images/erinneely.png" alt="erin neely" srcset="">
       <h2 class = "flex-item">Welcome to the Neely Page!</h2>
     </div>
     <footer>
